Add EF Core with SQLite and initial Item entity
Introduce Entity Framework Core with SQLite for data persistence. Add the Item entity and ForgeDbContext. Register the context in DI, ensure database creation at startup, and update configuration with a connection string. Update project references to include EF Core packages.

--- a/src/Forge.Api/appsettings.Development.json
+++ b/src/Forge.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "ForgeDb": "Data Source=forge.db"
   }
 }
