--- a/src/Forge.Api/Forge.Api.csproj
+++ b/src/Forge.Api/Forge.Api.csproj
@@ -7,14 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.2">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="10.0.2" />
+    <PackageReference Include="Scalar.AspNetCore" Version="2.12.27" />
     <PackageReference Include="WolverineFx" Version="5.13.0" />
     <PackageReference Include="WolverineFx.Http" Version="5.13.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Forge.ServiceDefaults\Forge.ServiceDefaults.csproj" />
   </ItemGroup>
 
 </Project>
