Add Aspire-managed SQLite service and streamline EF config
Modernize database setup by introducing Aspire-managed SQLite as a first-class service. Update Forge.Api to use CommunityToolkit.Aspire.Microsoft.EntityFrameworkCore.Sqlite and register the DbContext via AddSqliteDbContext. Remove manual connection string management from appsettings. Update AppHost to define and reference the SQLite service, and add required Aspire hosting package. Add settings.json for tooling support. This streamlines configuration and improves local development.

--- a/src/Forge.AppHost/Forge.AppHost.csproj
+++ b/src/Forge.AppHost/Forge.AppHost.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\Forge.Web\Forge.Web.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Aspire.Hosting.Sqlite" Version="13.1.2-beta.514" />
+  </ItemGroup>
+
 </Project>
