Centralize package versions and refactor code analysis
- Move package versions to Directory.Packages.props and common build settings to Directory.Build.props for consistency.
- Update .editorconfig with custom static analysis suppressions and naming rules.
- Remove explicit package versions from project files; clean up property groups.
- Reorganize solution structure and project references.
- Rename strongly-typed ID static method New() to Create(); update all usages.
- Add code analysis suppressions and NotNull attributes to address analyzer warnings.
- Fix Recipe entity to consolidate validated lines.
- Use await app.RunAsync() in entry points for async support.
- Suppress CA5394 in Weather.razor for demo Random usage.
- Apply minor code style and nullability improvements throughout.

--- a/.editorconfig
+++ b/.editorconfig
@@ -196,7 +196,25 @@ csharp_space_between_square_brackets = false
 csharp_preserve_single_line_blocks = true
 csharp_preserve_single_line_statements = true
 
+# Static code analysis rule customizations
+
+# CA2007: Consider calling ConfigureAwait on the awaited task
+dotnet_diagnostic.CA2007.severity = none
+
+# CA1515: Consider making public types internal
+dotnet_diagnostic.CA1515.severity = none
+
+# S2094: Classes should not be empty
+dotnet_diagnostic.S2094.severity = none
+
+# IDE0058: Expression value is never used
+dotnet_diagnostic.IDE0058.severity = none
+
+# IDE0005: Remove unnecessary usings/imports
+dotnet_diagnostic.IDE0005.severity = none
+
 #### Naming styles ####
+
 [*.{cs,vb}]
 
 # Naming rules
