--- a/src/Forge.AppHost/Forge.AppHost.csproj
+++ b/src/Forge.AppHost/Forge.AppHost.csproj
@@ -1,20 +1,17 @@
 ﻿<Project Sdk="Aspire.AppHost.Sdk/13.1.0">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net10.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <OutputType>Exe</OutputType>    
     <UserSecretsId>a441fa29-4988-4bc2-b38d-8e2a8458ce62</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Forge.Api\Forge.Api.csproj" />
-    <ProjectReference Include="..\Forge.Web\Forge.Web.csproj" />
+    <PackageReference Include="CommunityToolkit.Aspire.Hosting.Sqlite" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Aspire.Hosting.Sqlite" Version="13.1.2-beta.514" />
+    <ProjectReference Include="..\Forge.Api\Forge.Api.csproj" />
+    <ProjectReference Include="..\Forge.Web\Forge.Web.csproj" />
   </ItemGroup>
 
 </Project>
